[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/puzzles/TVPuzzle.gd" type="Script" id=1]
[ext_resource path="res://assets/TVPuzzle_clue_spriteframes.tres" type="SpriteFrames" id=2]

[node name="TVPuzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="Clues" type="Node2D" parent="."]

[node name="LeftClue" type="AnimatedSprite" parent="Clues"]
position = Vector2( 280.667, 266.347 )
frames = ExtResource( 2 )

[node name="RighClue" type="AnimatedSprite" parent="Clues"]
position = Vector2( 946.534, 283.531 )
frames = ExtResource( 2 )

[node name="TopClue" type="AnimatedSprite" parent="Clues"]
position = Vector2( 565.629, 57.2789 )
frames = ExtResource( 2 )

[node name="BottomClue" type="AnimatedSprite" parent="Clues"]
position = Vector2( 554.174, 505.487 )
frames = ExtResource( 2 )
